- Fixed horizontal scrolling bug

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -40,26 +40,35 @@
 
 /*navigation*/
 #nav-height {
-    border-bottom: 2px solid rgba(241, 75, 32, 0.91) !important;
-    background-color: #fff;
-    /* IE 8 */
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+    border-bottom: 2px solid rgba(241, 75, 32, 0.9) !important;
+    background-color: rgba(255, 255, 255, 0.4);
+    /* IE 8
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)"; */
 
-    /* IE 5-7 */
-    filter: alpha(opacity=70);
+    /* IE 5-7
+    filter: alpha(opacity=70); */
 
-    /* Netscape */
-    -moz-opacity: 0.7;
+    /* Netscape
+    -moz-opacity: 0.7; */
 
-    /* Safari 1.x */
-    -khtml-opacity: 0.7;
+    /* Safari 1.x
+    -khtml-opacity: 0.7;*/
 
-    /* Good browsers */
-    opacity: 0.7 !important;
+    /* Good browsers
+    opacity: 0.7 !important;*/
+}
+#nav-height .form-group input,
+#nav-height .form-group button {
+    /*background-color: transparent;*/
+}
+#nav-height .form-group input:hover,
+#nav-height .form-group button:hover {
+    /*background-color: transparent;*/
 }
 .page-scroll {
     font-weight: bold;
     color: #333 !important;
+    text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
 }
 .page-scroll:hover{
     font-weight: bold;
